--- a/ssl/02-kafka-client.yaml
+++ b/ssl/02-kafka-client.yaml
@@ -2,41 +2,41 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: kafka-cli
+  name: kafka-ssl-plain-client
   namespace: kafka
   labels:
-    app: kafka-cli
+    app: kafka-ssl-plain-client
 spec:
   containers:
-  - name: kafka-cli
+  - name: kafka-ssl-plain-client
     command:
     - sh
     - -c
     - "trap : TERM INT; sleep infinity & wait"
     env:
     - name: BOOTSTRAP_SERVER
-      value: kafka-0.kafka-headless.kafka.svc.cluster.local:9093,kafka-1.kafka-headless.kafka.svc.cluster.local:9093,kafka-2.kafka-headless.kafka.svc.cluster.local:9093
-    image: docker.io/confluentinc/cp-kafka:7.5.0
+      value: kafka-ssl-plain-0.kafka-ssl-plain-headless.kafka.svc.cluster.local:9093,kafka-ssl-plain-1.kafka-ssl-plain-headless.kafka.svc.cluster.local:9093
+    image: docker.io/confluentinc/cp-kafka:latest
     imagePullPolicy: IfNotPresent
     resources:
       limits:
-        cpu: 500m
-        memory: 500Mi
+        cpu: 100m
+        memory: 200Mi
       requests:
-        cpu: 500m
-        memory: 500Mi
+        cpu: 100m
+        memory: 200Mi
     terminationMessagePath: /dev/termination-log
     terminationMessagePolicy: File
     volumeMounts:
         - mountPath: /etc/kafka/secrets/
-          name: kafka-client
+          name: kafka-ssl-plain-client
   dnsPolicy: ClusterFirst
   enableServiceLinks: true
   restartPolicy: Always
   securityContext: {}
-  serviceAccountName: kafka
+  serviceAccountName: kafka-ssl-plain
   terminationGracePeriodSeconds: 30
   volumes:
-  - name: kafka-client
+  - name: kafka-ssl-plain-client
     configMap: 
-      name: kafka-client
+      name: kafka-ssl-plain-client
