update ssl from ssl_plain

--- a/ssl/02-kafka-ssl-client.yaml
+++ b/ssl/02-kafka-ssl-client.yaml
@@ -2,20 +2,20 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: kafka-ssl-plain-client
+  name: kafka-ssl-client
   namespace: kafka
   labels:
-    app: kafka-ssl-plain-client
+    app: kafka-ssl-client
 spec:
   containers:
-  - name: kafka-ssl-plain-client
+  - name: kafka-ssl-client
     command:
     - sh
     - -c
     - "trap : TERM INT; sleep infinity & wait"
     env:
     - name: BOOTSTRAP_SERVER
-      value: kafka-ssl-plain-0.kafka-ssl-plain-headless.kafka.svc.cluster.local:9093,kafka-ssl-plain-1.kafka-ssl-plain-headless.kafka.svc.cluster.local:9093
+      value: kafka-ssl-0.kafka-ssl-headless.kafka.svc.cluster.local:9093,kafka-ssl-1.kafka-ssl-headless.kafka.svc.cluster.local:9093
     image: docker.io/confluentinc/cp-kafka:latest
     imagePullPolicy: IfNotPresent
     resources:
@@ -29,14 +29,14 @@ spec:
     terminationMessagePolicy: File
     volumeMounts:
         - mountPath: /etc/kafka/secrets/
-          name: kafka-ssl-plain-client
+          name: kafka-ssl-client
   dnsPolicy: ClusterFirst
   enableServiceLinks: true
   restartPolicy: Always
   securityContext: {}
-  serviceAccountName: kafka-ssl-plain
+  serviceAccountName: kafka-ssl
   terminationGracePeriodSeconds: 30
   volumes:
-  - name: kafka-ssl-plain-client
+  - name: kafka-ssl-client
     configMap: 
-      name: kafka-ssl-plain-client
+      name: kafka-ssl-client
