--- a/ssl/01-kafka-ssl.yaml
+++ b/ssl/01-kafka-ssl.yaml
@@ -2,15 +2,15 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: kafka-ssl-plain
+  name: kafka-ssl
   namespace: kafka
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: kafka-ssl-plain
-  name: kafka-ssl-plain-headless
+    app: kafka-ssl
+  name: kafka-ssl-headless
   namespace: kafka
 spec:
   ipFamilies:
@@ -26,7 +26,7 @@ spec:
     protocol: TCP
     targetPort: tcp-kafka-ssl
   selector:
-    app: kafka-ssl-plain
+    app: kafka-ssl
   sessionAffinity: None
   type: NodePort
 ---
@@ -34,8 +34,8 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   labels:
-    app: kafka-ssl-plain
-  name: kafka-ssl-plain
+    app: kafka-ssl
+  name: kafka-ssl
   namespace: kafka
 spec:
   podManagementPolicy: Parallel
@@ -43,14 +43,14 @@ spec:
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: kafka-ssl-plain
-  serviceName: kafka-ssl-plain-headless
+      app: kafka-ssl
+  serviceName: kafka-ssl-headless
   template:
     metadata:
       labels:
-        app: kafka-ssl-plain
+        app: kafka-ssl
     spec:
-      serviceAccountName: kafka-ssl-plain
+      serviceAccountName: kafka-ssl
       containers:
       - command:
         - sh
@@ -75,7 +75,7 @@ spec:
         - name: CLUSTER_ID
           value: "6PMpHYL9QkeyXRj9Nrp4KA"
         - name: KAFKA_CONTROLLER_QUORUM_VOTERS
-          value: "0@kafka-ssl-plain-0.kafka-ssl-plain-headless.kafka.svc.cluster.local:29093,1@kafka-ssl-plain-1.kafka-ssl-plain-headless.kafka.svc.cluster.local:29093"
+          value: "0@kafka-ssl-0.kafka-ssl-headless.kafka.svc.cluster.local:29093,1@kafka-ssl-1.kafka-ssl-headless.kafka.svc.cluster.local:29093"
         - name: KAFKA_PROCESS_ROLES
           value: "broker,controller"
         - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
@@ -91,7 +91,7 @@ spec:
         - name: KAFKA_LISTENERS
           value: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:29093,SSL://0.0.0.0:9093
         - name: SERVICE_NAME
-          value: "kafka-ssl-plain"
+          value: "kafka-ssl"
         - name: POD_NAME
           valueFrom:
             fieldRef:
@@ -102,7 +102,7 @@ spec:
             fieldRef:
               apiVersion: v1
               fieldPath: metadata.namespace
-        name: kafka-ssl-plain
+        name: kafka-ssl
         image: docker.io/confluentinc/cp-kafka:latest
         imagePullPolicy: IfNotPresent
         livenessProbe:
@@ -141,7 +141,7 @@ spec:
         terminationMessagePolicy: File
         volumeMounts:
         - mountPath: /etc/kafka/secrets/
-          name: kafka-ssl-plain
+          name: kafka-ssl
         - mountPath: /etc/kafka
           name: config
         - mountPath: /var/lib/kafka/data
@@ -159,9 +159,9 @@ spec:
         name: config
       - emptyDir: {}
         name: logs
-      - name: kafka-ssl-plain
+      - name: kafka-ssl
         configMap: 
-          name: kafka-ssl-plain
+          name: kafka-ssl
   updateStrategy:
     type: RollingUpdate
   volumeClaimTemplates:
